[package]
name = "pi-steer-rust"
version = "0.1.4"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono="0.4.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
log = "0.4.26"
simple_logger = "5.0.0"
serialport = "4.3.0"
byteorder = "1.4.3"
rppal = "0.22.1"
# std = { version = "0.0.0", features = ["net"] }
once_cell = "1.21.1"
clap = "4.5.32"